fixed navbar toggle contrast in one theme

--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -77,6 +77,8 @@ html { overflow-y: scroll; }
     .uk-navbar-toggle:hover,
     .uk-navbar-toggle:focus { color: @contrast-color; }
 
+    .uk-navbar-toggle:after { background: url("@{global-image-path}/navbar-toggle-contrast.svg") 0 0 no-repeat; }
+
     // Logo
     .tm-logo { display: none; }
     .tm-logo-contrast { display: inline-block; }
